brought prior tabs overflow fix into the compact theme

--- a/interface/themes/tabs_style_compact.css
+++ b/interface/themes/tabs_style_compact.css
@@ -95,6 +95,7 @@ body
     padding: 0 0 0 0;
     display: flex;
     flex-direction: row;
+    overflow: auto;
 }
 
 .tabSpan
